# state-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  requests.http  state.md
migrations/2020-09-02-171622_initial/: down.sql  up.sql
src/: config.rs  data_entries.rs  db.rs  error.rs  log.rs  main.rs  schema.rs  text_utils.rs
src/api/: errors.rs  historical.rs  mod.rs  parsing.rs  sql.rs
src/data_entries/: daemon.rs  mod.rs  repo.rs  sql.rs  updates.rs
