[package]
name = "state-service"
version = "0.1.0"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
envy = "0.4"
tokio = { version = "0.2", features = ["full"] }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", branch = "blockchain-updates-from-1.2.6" }
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
slog-json = "2.3"
async-trait = "0.1"
once_cell = "1.4"
bs58 = "0.3"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "numeric"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
bigdecimal = { version = "0.1.2", features = ["serde"] }
num-traits = "0.2.2"
warp = "0.2"
regex = "1"
base64 = "0.12"
thiserror = "1.0"

[[bin]]
name = "service"
path = "src/main.rs"
