[package]
name = "state-service"
version = "1.2.1"
authors = ["Dmitry Shuranov <dvshur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_qs = { version = "0.8", features = ["warp"] }
envy = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
once_cell = "1.4"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2", "numeric", "64-column-tables"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
bigdecimal = { version = "0.1.2", features = ["serde"] }
warp = { version = "0.3", default-features = false }
regex = "1"
base64 = "0.12"
thiserror = "1.0"
percent-encoding = "2.1"
tracing = { version = "0.1.25", features = ["log-always"] }
tracing-opentelemetry = "0.12.0"
tracing-subscriber = { version = "0.2.7", default-features = false, features = ["env-filter", "registry", "fmt"] }
tracing-futures = "0.2.5"
opentelemetry = { version = "0.13", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.12"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.3.0" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.11.0" }
itertools = "0.10.1"
md5 = "0.7.0"

[[bin]]
name = "service"
path = "src/main.rs"
